--- a/src/assets/swagger/index.html
+++ b/src/assets/swagger/index.html
@@ -39,11 +39,10 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-//        url: "https://petstore.swagger.io/v2/swagger.json",
 		urls: [
-		{name:"PestStore", url:"https://petstore.swagger.io/v2/swagger.json"},
-		{name:"Sun", url:"specs/openapi_sunrise_sunset.yml"},
-		{name:"Weather", url:"specs/openapi_openweathermap.yml"},
+		{name:"PetStore", url:"https://petstore.swagger.io/v2/swagger.json"},
+		{name:"Sunrise Sunset", url:"specs/openapi_sunrise_sunset.yml"},
+		{name:"Open Weather Map", url:"specs/openapi_openweathermap.yml"},
 		],
         dom_id: '#swagger-ui',
         deepLinking: true,
