--- a/src/assets/swagger/index.html
+++ b/src/assets/swagger/index.html
@@ -41,8 +41,8 @@
       const ui = SwaggerUIBundle({
 		urls: [
 		{name:"PetStore", url:"https://petstore.swagger.io/v2/swagger.json"},
-		{name:"Sunrise Sunset", url:"specs/openapi_sunrise_sunset.yml"},
-		{name:"Open Weather Map", url:"specs/openapi_openweathermap.yml"},
+		{name:"Sunrise and sunset times", url:"specs/openapi_sunrise_sunset.yml"},
+		{name:"Open weather map", url:"specs/openapi_openweathermap.yml"},
 		],
         dom_id: '#swagger-ui',
         deepLinking: true,
